--- a/RecruiterHome.html
+++ b/RecruiterHome.html
@@ -1,1 +1,80 @@
-RecruiterHome.html
+<!DOCTYPE html>
+<html>
+	<head>
+		<style>
+		.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+    width: 50%;
+}
+.filter{
+	background-color: #4CAF50;
+}
+
+.post1{
+	border-radius: 25px;
+	border-style: solid;
+	margin: 20px;
+}
+
+</style>
+</head>
+
+<body>
+<div class="topnav">
+  <a class="active" href="#browse">Browse Actors</a>
+  
+  <a href="#postings">My Postings</a>
+</div>
+
+<div class="filter">
+	<h2>Filter</h2>
+	<form>
+  		Age:<br>
+  		<input type="text" name="age"><br>
+  		Gender:<br>
+  		 <input type="radio" name="gender" value="male" checked> Male<br>
+  		<input type="radio" name="gender" value="female"> Female<br>
+  		<input type="radio" name="gender" value="other"> Other
+  		Location:<br>
+  		<input type = "text" name="location"><br>
+  		Ethnicity:<br>
+  		<input type = "text" name="ethnicity"><br>
+  		<input type="submit" value="Apply">
+	</form>
+</div>
+
+<div class = "post1">
+	<h1>Actor 1</h1>
+	<h3>Name</h3>
+	<h3>Gender</h3>
+	<h3>Age</h3>
+	<h3>Location</h3>
+	<h3>Ethnicity</h3>
+</div>
+
+
+
+</body>
+</html>
