--- a/RecruiterHome.html
+++ b/RecruiterHome.html
@@ -29,6 +29,8 @@
     width: 50%;
 }
 .filter{
+	margin-top:20px;
+	border-style: solid;
 	background-color: #4CAF50;
 }
 
@@ -66,12 +68,12 @@
 </div>
 
 <div class = "post1">
-	<h1>Actor 1</h1>
-	<h3>Name</h3>
-	<h3>Gender</h3>
-	<h3>Age</h3>
-	<h3>Location</h3>
-	<h3>Ethnicity</h3>
+	<h1><center>Actor 1</center></h1>
+	<h3><center>Name</center></h3>
+	<h3><center>Gender<center></h3>
+	<h3><center>Age<center></h3>
+	<h3><center>Location<center></h3>
+	<h3><center>Ethnicity<center></h3>
 </div>
 
 
