--- a/RecruitersPostings.html
+++ b/RecruitersPostings.html
@@ -56,6 +56,14 @@
 	margin: 20px;
 } 
 
+.Status{
+	margin-right: 20px;
+	font-weight: bold;
+}
+.dropdown{
+	margin-top: 0px;
+}
+
 </style>
 </head>
 
@@ -73,8 +81,7 @@
   
   <a href="#postings">My Postings</a>
 </div> -->
-
-<h1> Browse Actors</h1>
+<h1> My Postings </h1>
 <div class="filter">
 	<h2>Filter</h2>
 	<form>
@@ -93,21 +100,31 @@
 </div>
 
 <div class = "post1">
-	<h1><center>Actor 1</center></h1>
-	<h3><center>Name</center></h3>
-	<h3><center>Gender<center></h3>
-	<h3><center>Age<center></h3>
-	<h3><center>Location<center></h3>
-	<h3><center>Ethnicity<center></h3>
+	<h1>Post 1</h1>
+	<h2>Looking for Male to play lead role</h2>
+	<h3>Interested Actors</h3>
+	<select class = "dropdown">
+ 		<option value="actor1">Actor 1</option>
+  		<option value="actor2">Actor 2</option>
+  		<option value="actor3">Actor 3</option>
+  		<option value="actor4">Actor 4</option>
+	</select>
+	<p class="Status" align="right">OPEN</h3>
+
+	
 </div>
 
 <div class = "post2">
-	<h1><center>Actor 2</center></h1>
-	<h3><center>Name</center></h3>
-	<h3><center>Gender<center></h3>
-	<h3><center>Age<center></h3>
-	<h3><center>Location<center></h3>
-	<h3><center>Ethnicity<center></h3>
+<h1>Post 2</h1>
+	<h3>Looking for Female to play lead role</h3>
+	<select class = "dropdown">
+ 		<option value="actor1">Actor 1</option>
+  		<option value="actor2">Actor 2</option>
+  		<option value="actor3">Actor 3</option>
+  		<option value="actor4">Actor 4</option>
+	</select>
+	<p class="Status" align="right">CLOSED</h3>
+
 </div>
 
 
