changes to agent's pages and set isaac chu as an example agent

--- a/AgentCastingCalls.html
+++ b/AgentCastingCalls.html
@@ -54,7 +54,7 @@
 <div class="topnav">
   <a class="active" href="#browse">Browse Casting Calls</a>
   <a href="#portfolio">My Portfolio</a>
-  <a href="#postings">My Clients</a>
+  <a href="#clients">My Clients</a>
 </div>
 <form align="right" name="form1" method="post" action="log_out.php">
   <label class="logoutLblPos">
@@ -81,10 +81,21 @@
 
 <div class = "post1">
 	<h1><center>Titanic</center></h1>
+	<h2><center>Feature Film</center></h2>
 	<h3><center>Role: Rose</center></h3>
 	<h3><center>Gender: Female<center></h3>
 	<h3><center>Age: 25-35<center></h3>
 	<h3><center>Location: Santa Monica<center></h3>
+	<h3><center>Ethnicity: Caucasian<center></h3>
+</div>
+
+<div class = "post1">
+	<h1><center>Game of Thrones</center></h1>
+	<h2><center>Television series</center></h2>
+	<h3><center>Role: Extra wildling</center></h3>
+	<h3><center>Gender: Male/Female<center></h3>
+	<h3><center>Age: N/A<center></h3>
+	<h3><center>Location: Iceland<center></h3>
 	<h3><center>Ethnicity: Caucasian<center></h3>
 </div>
 
