--- a/RecruiterHome.html
+++ b/RecruiterHome.html
@@ -56,6 +56,10 @@
 	margin: 20px;
 } 
 
+body{
+	font-family: cursive;
+}
+
 </style>
 </head>
 
@@ -94,10 +98,10 @@
 
 <div class = "post1">
 	<h1><center>Actor 1</center></h1>
-	<h3><center>Name</center></h3>
-	<h3><center>Gender<center></h3>
-	<h3><center>Age<center></h3>
-	<h3><center>Location<center></h3>
+	<h3><center>Brad Pitt</center></h3>
+	<h3><center>Male<center></h3>
+	<h3><center>52<center></h3>
+	<h3><center>Los Angeles<center></h3>
 	<h3><center>Ethnicity<center></h3>
 </div>
 
