--- a/RecruitersPostings.html
+++ b/RecruitersPostings.html
@@ -48,12 +48,14 @@
 	border-radius: 25px;
 	border-style: solid;
 	margin: 20px;
+	
 } 
 
 .post2{
 	border-radius: 25px;
 	border-style: solid;
 	margin: 20px;
+	
 } 
 
 .Status{
@@ -63,6 +65,10 @@
 .dropdown{
 	margin-top: 0px;
 }
+body{
+	font-family: cursive;
+}
+
 
 </style>
 </head>
@@ -100,7 +106,7 @@
 </div>
 
 <div class = "post1">
-	<h1>Post 1</h1>
+	<h1 style = "font-family:cursive; ">Post 1</h1>
 	<h2>Looking for Male to play lead role</h2>
 	<h3>Interested Actors</h3>
 	<select class = "dropdown">
