--- a/RecruitersPostings.html
+++ b/RecruitersPostings.html
@@ -122,7 +122,8 @@ body{
 
 <div class = "post2">
 <h1>Post 2</h1>
-	<h3>Looking for Female to play lead role</h3>
+	<h2>Looking for Female to play lead role</h2>
+	<h3>Interested Actors</h3>
 	<select class = "dropdown">
  		<option value="actor1">Actor 1</option>
   		<option value="actor2">Actor 2</option>
