--- a/AgentsClients.html
+++ b/AgentsClients.html
@@ -46,15 +46,24 @@
    top:5px;
 }
 
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: initial;
+}
+
 </style>
 </head>
 
 <body>
 	<p>Welcome!</p>
 <div class="topnav">
-  <a class="active" href="#browse">Browse Casting Calls</a>
+  <a href="#browse">Browse Casting Calls</a>
   <a href="#portfolio">My Portfolio</a>
-  <a href="#clients">My Clients</a>
+  <a class="active" href="#clients">My Clients</a>
 </div>
 <form align="right" name="form1" method="post" action="log_out.php">
   <label class="logoutLblPos">
@@ -80,37 +89,27 @@
 </div>
 
 <div class = "post1">
-	<h1><center>Titanic</center></h1>
-	<h2><center>Feature Film</center></h2>
-	<h3><center>Role: Rose</center></h3>
-	<h3><center>Gender: Female<center></h3>
-	<h3><center>Age: 25-35<center></h3>
-	<h3><center>Location: Santa Monica</center></h3>
-	<h3><center>Ethnicity: Caucasian</center></h3>
-  <h3>Recommend to</h3>
-  <select class = "dropdown">
-    <option value="actor1">Actor 1</option>
-      <option value="actor2">Actor 2</option>
-      <option value="actor3">Actor 3</option>
-      <option value="actor4">Actor 4</option>
-  </select>
+	<h1><center>Fake Client 1</center></h1>
+  <h3><center>Agency: CSE134B Talent<center></h3>
+  <h3><center>Gender: Male</center></h3>
+  <h3><center>Age: 30<center></h3>
+  <h3><center>Located: La Jolla<center></h3>
+  <h3><center>Website: fakeclient1.com <center></h3>
+  <div style="text-align: center">
+  <a href="http://google.com" class="button" >Message</a>
+  </div>
 </div>
 
 <div class = "post1">
-	<h1><center>Game of Thrones</center></h1>
-	<h2><center>Television series</center></h2>
-	<h3><center>Role: Extra wildling</center></h3>
-	<h3><center>Gender: Male/Female<center></h3>
-	<h3><center>Age: N/A<center></h3>
-	<h3><center>Location: Iceland</center></h3>
-	<h3><center>Ethnicity: Caucasian</center></h3>
-    <h3>Recommend to</h3>
-  <select class = "dropdown">
-    <option value="actor1">Actor 1</option>
-      <option value="actor2">Actor 2</option>
-      <option value="actor3">Actor 3</option>
-      <option value="actor4">Actor 4</option>
-  </select>
+	<h1><center>Fake Client 2</center></h1>
+  <h3><center>Agency: CSE134B Talent<center></h3>
+  <h3><center>Gender: Female</center></h3>
+  <h3><center>Age: 24<center></h3>
+  <h3><center>Located: La Jolla<center></h3>
+  <h3><center>Website: fakeclient2.com <center></h3>
+  <div style="text-align: center">
+  <a href="http://google.com" class="button" >Message</a>
+  </div>
 </div>
 
 
