added an external css page to keep css style consistent across all pages

--- a/AgentCastingCalls.html
+++ b/AgentCastingCalls.html
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
+     <link rel="stylesheet" href="styles.css">
+
 		<style>
 		.topnav {
     background-color: #333;
     overflow: hidden;
 }
 
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
 
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    width: 50%;
-}
 .filter{
 	margin-top:20px;
 	border-style: solid;
-	background-color: #4CAF50;
+	background-color: #C1DBD3;
 }
 
 .post1{
@@ -45,6 +27,7 @@
    right:10px;
    top:5px;
 }
+
 
 </style>
 </head>
@@ -88,7 +71,7 @@
 	<h3><center>Location: Santa Monica</center></h3>
 	<h3><center>Ethnicity: Caucasian</center></h3>
   <h3>Recommend to</h3>
-  <select class = "dropdown">
+   <select class = "dropdown">
     <option value="actor1">Actor 1</option>
       <option value="actor2">Actor 2</option>
       <option value="actor3">Actor 3</option>
@@ -117,3 +100,4 @@
 
 </body>
 </html>
+
