--- a/actorPortfolio.html
+++ b/actorPortfolio.html
@@ -72,7 +72,7 @@
     <ul>
         <li><a href="actorHomePage.html">Casting Calls</a></li>
         <li><a href="findAgent">Find Agent</a></li>
-        <li><a href=./actorPortfolio.html>Portfolio</a></li>
+        <li><a href="#actorPortfolio">Portfolio</a></li>
     </ul>
 
 
