--- a/actorHomePage.html
+++ b/actorHomePage.html
@@ -126,9 +126,9 @@
 <body>
 
     <ul>
-        <li><a href="actorHomePage.html">Casting Calls</a></li>
+        <li><a href="#actorHomePage">Casting Calls</a></li>
         <li><a href="#findAgent">Find Agent</a></li>
-        <li><a href=./actorPortfolio.html>Portfolio</a></li>
+        <li><a href="actorPortfolio.html">Portfolio</a></li>
     </ul>
 
     <div class="Filter">
