--- a/RecruiterHome.html
+++ b/RecruiterHome.html
@@ -61,6 +61,7 @@ body{
 }
 
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -99,6 +100,7 @@ body{
 <div class = "post1">
 	<h1><center>Actor 1</center></h1>
 	<h3><center>Brad Pitt</center></h3>
+  <center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
 	<h3><center>Male<center></h3>
 	<h3><center>52<center></h3>
 	<h3><center>Los Angeles<center></h3>
