--- a/ActorSignIn.html
+++ b/ActorSignIn.html
@@ -75,7 +75,7 @@
     <div class="loginSection">
         <p> &nbsp &nbsp Actors Sign In Page </p>
             <div class="logIn">
-                <form class="logIn" method="post" action="/action_page.php">
+                <form class="logIn" method="post" action="actorHomePage.html">
                     <br /><br />
 
                     <label for="email">Email</label>
@@ -87,7 +87,17 @@
                     <br /><br /><br />
 
                 </form>
-            </div>
+                <!---
+                    <label for=""> &nbsp &nbsp</label>
+                    <span style="display: inline;">
+                        <button onclick="window.location.href='actorHomePage.html'">Log In</button>
+                    </span>
+                    <br /><br /><br />
+                  -->
+
+                
+                
+</div>
 </div>
 
     <img class="actingImg" src="./actingImg.jpg" />
