--- a/AgentPortfolio.html
+++ b/AgentPortfolio.html
@@ -1,50 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+     <link rel="stylesheet" href="styles.css">
 		<style>
-		.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
 
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    width: 50%;
-}
-.filter{
-	margin-top:20px;
-	border-style: solid;
-	background-color: #4CAF50;
-}
-
-.post1{
-	border-radius: 25px;
-	border-style: solid;
-	margin: 20px;
-}
-
-.logoutLblPos{
-   position:fixed;
-   right:10px;
-   top:5px;
-}
 
 img {
     display: block;
@@ -56,26 +15,32 @@ img {
 </head>
 
 <body>
-	<p>Welcome!</p>
-<div class="topnav">
-  <a href="#browse">Browse Casting Calls</a>
-  <a class="active" href="#portfolio">My Portfolio</a>
-  <a href="#postings">My Clients</a>
-</div>
+<ul>
+        <li><a href="AgentCastingCalls.html">Browse Casting Calls</a></li>
+        <li><a href="./AgentsClients.html">My Clients</a></li>
+        <li><a href=./AgentPortfolio.html>Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
+</ul>
 <form align="right" name="form1" method="post" action="log_out.php">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
 </form>
 
-<div class = "post1">
-	<h1><center>Isaac Chu</center></h1>
-  <h3><center>Agency: CSE134B Talent<center></h3>
-	<h3><center>Gender: Male</center></h3>
-	<h3><center>Age: 45<center></h3>
-	<h3><center>Located: La Jolla<center></h3>
-	<h3><center>Website: welovefrontendfakewebsite.com <center></h3>
-  <img src="isaac-chu-pic.jpg" alt="Professor Chu" width="400" height="277" style="width:20%">
+<div class = "personInfo">
+  <img src="isaac-chu-pic.jpg" />
+  
+   <br />
+            Agent Info:<br /><br />
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbspName:
+  <input type="text" name="name" value="Isaac Chu"/><br><br />
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAge:
+	<input type="text" name="age" value="40" /><br><br />
+  &nbsp&nbsp&nbsp&nbsp&nbspGender:
+  <input type="text" name="gender" value="Male" /><br><br />
+  &nbsp&nbsp&nbsp&nbsp&nbspTalent Agency:
+  <input type="text" name="Agency" value="CSE134B Talent" /><br><br />
+
 </div>
 
 
