--- a/AgentsClients.html
+++ b/AgentsClients.html
@@ -1,49 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+     <link rel="stylesheet" href="styles.css">
 		<style>
-		.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
 
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    width: 50%;
-}
-.filter{
-	margin-top:20px;
-	border-style: solid;
-	background-color: #4CAF50;
-}
 
 .post1{
 	border-radius: 25px;
 	border-style: solid;
 	margin: 20px;
-}
-
-.logoutLblPos{
-   position:fixed;
-   right:10px;
-   top:5px;
 }
 
 a.button {
@@ -59,20 +24,22 @@ a.button {
 </head>
 
 <body>
-	<p>Welcome!</p>
-<div class="topnav">
-  <a href="#browse">Browse Casting Calls</a>
-  <a href="#portfolio">My Portfolio</a>
-  <a class="active" href="#clients">My Clients</a>
-</div>
+
+<ul>
+        <li><a href="AgentCastingCalls.html">Browse Casting Calls</a></li>
+        <li><a href="./AgentsClients.html">My Clients</a></li>
+        <li><a href=./AgentPortfolio.html>Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
+</ul>
+
 <form align="right" name="form1" method="post" action="log_out.php">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
 </form>
 
-<div class="filter">
-	<h2>Filter</h2>
+<div class="Filter">
+	
 	<form>
   		Age:<br>
   		<input type="text" name="age"><br>
@@ -87,8 +54,8 @@ a.button {
   		<input type="submit" value="Apply">
 	</form>
 </div>
-
-<div class = "post1">
+<div class="postings">
+<div class = "post">
 	<h1><center>Fake Client 1</center></h1>
   <h3><center>Agency: CSE134B Talent<center></h3>
   <h3><center>Gender: Male</center></h3>
@@ -96,11 +63,11 @@ a.button {
   <h3><center>Located: La Jolla<center></h3>
   <h3><center>Website: fakeclient1.com <center></h3>
   <div style="text-align: center">
-  <a href="http://google.com" class="button" >Message</a>
+  <a href="./Messages.html" class="button" >Message</a>
   </div>
 </div>
 
-<div class = "post1">
+<div class = "post">
 	<h1><center>Fake Client 2</center></h1>
   <h3><center>Agency: CSE134B Talent<center></h3>
   <h3><center>Gender: Female</center></h3>
@@ -108,8 +75,9 @@ a.button {
   <h3><center>Located: La Jolla<center></h3>
   <h3><center>Website: fakeclient2.com <center></h3>
   <div style="text-align: center">
-  <a href="http://google.com" class="button" >Message</a>
+  <a href="./Messages.html" class="button" >Message</a>
   </div>
+</div>
 </div>
 
 
