--- a/Messages.html
+++ b/Messages.html
@@ -1,35 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 0 20px;
-}
 
-.topnav a {
-    float: left;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    width: 50%;
-}
 
 .container {
     border: 2px solid #dedede;
@@ -76,11 +51,12 @@ body {
 </style>
 </head>
 <body>
-<div class="topnav">
-  <a href="#browse">Browse Casting Calls</a>
-  <a href="#portfolio">My Portfolio</a>
-  <a href="#clients">My Clients</a>
-</div>
+<ul>
+        <li><a href="AgentCastingCalls.html">Browse Casting Calls</a></li>
+        <li><a href="./AgentsClients.html">My Clients</a></li>
+        <li><a href=./AgentPortfolio.html>Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
+</ul>
 <form align="right" name="form1" method="post" action="log_out.php">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
