--- a/actorPortfolio.html
+++ b/actorPortfolio.html
@@ -1,37 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        ul {
-            display: flex;
-            justify-content: space-around;
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #EBEBEB;
-        }
-
-        li {
-            float: left;
-        }
-
-            li a {
-                display: block;
-                color: black;
-                text-align: center;
-                font-weight: bold;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-
-                li a:hover:not(.active) {
-                    background-color: burlywood;
-                }
-
-        .active {
-            background-color: gray;
-        }
+       
 
 
         div.actorInfo {
@@ -71,10 +43,15 @@
 
     <ul>
         <li><a href="actorHomePage.html">Casting Calls</a></li>
-        <li><a href="findAgent">Find Agent</a></li>
+        <li><a href="actorFindAgent.html">Find Agent</a></li>
         <li><a href="#actorPortfolio">Portfolio</a></li>
     </ul>
 
+    <form align="right" name="form1" method="post" action="log_out.php">
+        <label class="logoutLblPos">
+            <input name="submit2" type="submit" id="submit2" value="log out">
+        </label>
+    </form>
 
     <div class="actorInfo">
         <img class="actorImage" src="./actorImage.jpg" />
