added messages tab to all pages

--- a/actorHomePage.html
+++ b/actorHomePage.html
@@ -129,6 +129,7 @@
         <li><a href="#actorHomePage">Casting Calls</a></li>
         <li><a href="#findAgent">Find Agent</a></li>
         <li><a href="actorPortfolio.html">Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
     </ul>
 
     <div class="Filter">
