--- a/newRecruiterHome.html
+++ b/newRecruiterHome.html
@@ -130,6 +130,7 @@
     <ul>
         <li><a href="newRecruiterHome.html">Browse Actors</a></li>
         <li><a href="newRecruiterPostings.html">My Postings</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
     </ul>
 
     <div class="Filter">
