--- a/AgentSignIn.html
+++ b/AgentSignIn.html
@@ -64,7 +64,7 @@
 
 
     <div class="loginSection">
-        <p> &nbsp &nbsp Talent Recruiter Sign In Page </p>
+        <p> &nbsp &nbsp Agent Sign In Page </p>
             <div class="logIn">
                 <form class="logIn" method="post" action="/action_page.php">
                     <br /><br />
