--- a/actorPortfolio.html
+++ b/actorPortfolio.html
@@ -73,6 +73,7 @@
         <li><a href="actorHomePage.html">Casting Calls</a></li>
         <li><a href="findAgent">Find Agent</a></li>
         <li><a href="#actorPortfolio">Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
     </ul>
 
 
