--- a/newRecruiterPostings.html
+++ b/newRecruiterPostings.html
@@ -131,6 +131,7 @@
         <li><a href="newRecruiterHome.html">Browse Actors</a></li>
         <li><a href="#newRecruiterPostings.html">My Postings</a></li>
         <!--<li><a href=./actorPortfolio.html>Portfolio</a></li>-->
+        <li><a href=./Messages.html>Messages</a></li>
     </ul>
 
     <div class="Filter">
