--- a/RecruiterSignIn.html
+++ b/RecruiterSignIn.html
@@ -66,7 +66,7 @@
     <div class="loginSection">
         <p> &nbsp &nbsp Talent Recruiter Sign In Page </p>
             <div class="logIn">
-                <form class="logIn" method="post" action="/action_page.php">
+                <form class="logIn" method="post" action="./newRecruiterHome.html">
                     <br /><br />
 
                     <label for="email">Email</label>
