--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <ul>
         <li><a href="actorSignIn.html">Actors</a></li>
-        <li><a href="agent">Agent</a></li>
-        <li><a href="">Recruiter</a></li>
+        <li><a href="AgentSignIn.html">Agent</a></li>
+        <li><a href="RecruiterSignIn.html">Recruiter</a></li>
     </ul>
     <div>&nbsp;</div>
 
