--- a/AgentCastingCalls.html
+++ b/AgentCastingCalls.html
@@ -18,7 +18,7 @@
         <li><a href=./Messages.html>Messages</a></li>
 </ul>
 
-<form align="right" name="form1" method="post" action="log_out.php">
+<form align="right" name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
