--- a/actorFindAgent.html
+++ b/actorFindAgent.html
@@ -54,7 +54,7 @@
         <li><a href="findAgent">Find Agent</a></li>
         <li><a href="actorPortfolio.html">Portfolio</a></li>
     </ul>
-    <form align="right" name="form1" method="post" action="log_out.php">
+    <form align="right" name="form1" method="post" action="index.html">
         <label class="logoutLblPos">
             <input name="submit2" type="submit" id="submit2" value="log out">
         </label>
