--- a/newRecruiterHome.html
+++ b/newRecruiterHome.html
@@ -132,6 +132,11 @@
         <li><a href="newRecruiterPostings.html">My Postings</a></li>
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
+    <form align="right" name="form1" method="post" action="index.html">
+  <label class="logoutLblPos">
+  <input name="submit2" type="submit" id="submit2" value="log out">
+  </label>
+</form>
 
     <div class="Filter">
         <form action="/action_page.php">
