--- a/Messages.html
+++ b/Messages.html
@@ -52,10 +52,7 @@
 </head>
 <body>
 <ul>
-        <li><a href="AgentCastingCalls.html">Browse Casting Calls</a></li>
-        <li><a href="./AgentsClients.html">My Clients</a></li>
-        <li><a href=./AgentPortfolio.html>Portfolio</a></li>
-        <li><a href=./Messages.html>Messages</a></li>
+        <li><a href=./Messages>Messages</a></li>
 </ul>
 <form align="right" name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
