fixed errors and actor home page

--- a/actorFindAgent.html
+++ b/actorFindAgent.html
@@ -53,6 +53,7 @@
         <li><a href="actorHomePage.html">Casting Calls</a></li>
         <li><a href="findAgent">Find Agent</a></li>
         <li><a href="actorPortfolio.html">Portfolio</a></li>
+        <li><a href=./Messages.html>Messages</a></li>
     </ul>
     <form align="right" name="form1" method="post" action="index.html">
         <label class="logoutLblPos">
