--- a/RecruiterSignIn.html
+++ b/RecruiterSignIn.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
     <style>
         
         div.loginSection
@@ -56,32 +57,32 @@
 
         }
     </style>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Recruiter Sign Up</title>
+	
 </head>
 <body>
 
 
 
     <div class="loginSection">
-        <p> &nbsp &nbsp Talent Recruiter Sign In Page </p>
+        <p> &amp;nbsp &amp;nbsp Talent Recruiter Sign In Page </p>
             <div class="logIn">
                 <form class="logIn" method="post" action="./newRecruiterHome.html">
                     <br /><br />
 
                     <label for="email">Email</label>
-                    <input type="text" name="email">
-                    <label for="password"> &nbsp &nbsp Password</label>
-                    <input type="password" name="password" />
-                    <label for=""> &nbsp &nbsp</label>
-                    <input type="submit" value="Log In" />
+                    <input type="text" id="email" name="email">
+                    <label for="password"> &amp;nbsp &amp;nbsp Password</label>
+                    <input type="password" id="password" name="password" />
+                    <label for="submit"> &amp;nbsp &amp;nbsp</label>
+                    <input type="submit" id="submit" value="Log In" />
                     <br /><br /><br />
 
                 </form>
             </div>
 </div>
 
-    <img class="actingImg" src="./actingImg.jpg" />
+    <img class="actingImg" src="./actingImg.jpg" alt="Acting" />
 
     <div class="createAccount">
         <form action="/action_page.php">
