--- a/RecruiterHome.html
+++ b/RecruiterHome.html
@@ -98,13 +98,13 @@ body{
 </div>
 
 <div class = "post1">
-	<h1><center>Actor 1</center></h1>
-	<h3><center>Brad Pitt</center></h3>
+	<h1 style="text-align:center">Actor 1</h1>
+	<h3 style="text-align:center">Brad Pitt</h3>
   <center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
-	<h3><center>Male<center></h3>
-	<h3><center>52<center></h3>
-	<h3><center>Los Angeles<center></h3>
-	<h3><center>Ethnicity<center></h3>
+	<h3 style="text-align:center">Male</h3>
+	<h3 style="text-align:center">52</h3>
+	<h3 style="text-align:center">Los Angeles</h3>
+	<h3 style="text-align:center">Ethnicity</h3>
 </div>
 
 <div class = "post2">
