--- a/actorPortfolio.html
+++ b/actorPortfolio.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+<head> 
+    <title>Actor Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
        
@@ -48,24 +49,24 @@
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
 
-    <form align="right" name="form1" method="post" action="index.html">
+    <form name="form1" method="post" action="index.html">
         <label class="logoutLblPos">
             <input name="submit2" type="submit" id="submit2" value="log out">
         </label>
     </form>
 
     <div class="actorInfo">
-        <img class="actorImage" src="./actorImage.jpg" />
+        <img class="actorImage" src="./actorImage.jpg" alt="Alt" />
         <form action="/action_page.php">
             <br />
             Actor Info:<br /><br />
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbspName:
+            &amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbspName:
             <input type="text" name="name" value="Tom Lee"/><br><br />
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAge:
+            &amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbspAge:
             <input type="text" name="age" value="40" /><br><br />
-            &nbsp&nbsp&nbsp&nbsp&nbspGender:
+            &amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbspGender:
             <input type="text" name="gender" value="Male" /><br><br />
-            &nbsp&nbsp&nbsp&nbsp&nbspHeight:
+            &amp;nbsp&amp;nbsp&amp;nbsp&amp;nbsp&amp;nbspHeight:
             <input type="text" name="height" value="5′8" /><br><br />
             Ethinicity:
             <input type="text" name="ethinicity" value="White" /><br><br />
