--- a/newRecruiterHome.html
+++ b/newRecruiterHome.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <style>
         ul {
             display:flex;
@@ -124,6 +125,7 @@
 
     </style>
     <link rel="stylesheet" href="styles.css">
+    <title>Recruiter Home Page</title>
 </head>
 <body>
 
@@ -132,7 +134,7 @@
         <li><a href="newRecruiterPostings.html">My Postings</a></li>
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
-    <form align="right" name="form1" method="post" action="index.html">
+    <form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
@@ -159,41 +161,44 @@
        
     <div class="post1">
     	<h2> Posting 1: </h2>
-		<h3><center>Brad Pitt</center></h3>
-  		<center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
-		<h3><center>Male<center></h3>
-		<h3><center>52<center></h3>
-		<h3><center>Los Angeles<center></h3>
-		<h3><center>Ethnicity<center></h3>
+		<h3 style="text-align:center">Brad Pitt</h3>
+  		<!---<img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;position:relative">-->
+		<h3 style="text-align:center">Male</h3>
+		<h3 style="text-align:center">52</h3>
+		<h3 style="text-align:center">Los Angeles</h3>
+		<h3 style="text-align:center">Ethnicity</h3>
     </div>
 
     <div class="post2">
         <h2> Posting 2: </h2>
-		<h3><center>Brad Pitt</center></h3>
-  		<center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
-		<h3><center>Male<center></h3>
-		<h3><center>52<center></h3>
-		<h3><center>Los Angeles<center></h3>
-		<h3><center>Ethnicity<center></h3>
-    </div>
-        <div class="post3">
-        	<h2> Posting 3: </h2>
-		<h3><center>Brad Pitt</center></h3>
-  		<center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
-		<h3><center>Male<center></h3>
-		<h3><center>52<center></h3>
-		<h3><center>Los Angeles<center></h3>
-		<h3><center>Ethnicity<center></h3>
-        </div>
-        <div class="post4">
-        	<h2> Posting 4: </h2>
-		<h3><center>Brad Pitt</center></h3>
-  		<center><img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;"></center>
-		<h3><center>Male<center></h3>
-		<h3><center>52<center></h3>
-		<h3><center>Los Angeles<center></h3>
-		<h3><center>Ethnicity<center></h3>
-        </div>
+        <h3 style="text-align:center">Brad Pitt</h3>
+        <!---<img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;text-align:center">-->
+        <h3 style="text-align:center">Male</h3>
+        <h3 style="text-align:center">52</h3>
+        <h3 style="text-align:center">Los Angeles</h3>
+        <h3 style="text-align:center">Ethnicity</h3>
+    </div>        
+
+    <div class="post3">
+        <h2> Posting 3: </h2>
+        <h3 style="text-align:center">Brad Pitt</h3>
+        <!--<img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;" style="text-align:center">-->
+        <h3 style="text-align:center">Male</h3>
+        <h3 style="text-align:center">52</h3>
+        <h3 style="text-align:center">Los Angeles</h3>
+        <h3 style="text-align:center">Ethnicity</h3>
+    </div>  
+
+
+       <div class="post4">
+        <h2> Posting 4: </h2>
+        <h3 style="text-align:center">Brad Pitt</h3>
+        <!--<img src="/Users/Anurag/Downloads/1242911076001_5367624651001_et-bradpittmotorcycle-032117-hulu.jpg" style="width:200px;height:200px;text-align:center"  >-->
+        <h3 style="text-align:center">Male</h3>
+        <h3 style="text-align:center">52</h3>
+        <h3 style="text-align:center">Los Angeles</h3>
+        <h3 style="text-align:center">Ethnicity</h3>
+    </div>  
     </div>
 </body>
 </html>
