--- a/newRecruiterPostings.html
+++ b/newRecruiterPostings.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Recruiters Postings</title>
     <style>
         ul {
             display:flex;
@@ -133,7 +135,7 @@
         <!--<li><a href=./actorPortfolio.html>Portfolio</a></li>-->
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
-    <form align="right" name="form1" method="post" action="index.html">
+    <form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
@@ -168,7 +170,7 @@
   		<option value="actor3">Actor 3</option>
   		<option value="actor4">Actor 4</option>
 	</select>
-	<p class="Status" align="right">OPEN</h3>
+	<p class="Status">OPEN
     </div>
 
     <div class="post2">
@@ -181,7 +183,7 @@
   		<option value="actor3">Actor 3</option>
   		<option value="actor4">Actor 4</option>
 	</select>
-	<p class="Status" align="right">OPEN</h3>
+	<p class="Status">OPEN
     </div>
         <div class="post3">
            <h1 style = "font-family:cursive; ">Post 3</h1>
@@ -193,7 +195,7 @@
   		<option value="actor3">Actor 3</option>
   		<option value="actor4">Actor 4</option>
 	</select>
-	<p class="Status" align="right">CLOSED</h3>
+	<p class="Status">CLOSED
         </div>
         <div class="post4">
     <h1 style = "font-family:cursive; ">Post 4</h1>
@@ -205,7 +207,7 @@
   		<option value="actor3">Actor 3</option>
   		<option value="actor4">Actor 4</option>
 	</select>
-	<p class="Status" align="right">CLOSED</h3>
+	<p class="Status">CLOSED
         </div>
     </div>
 </body>
