fixed html errors

--- a/AgentCastingCalls.html
+++ b/AgentCastingCalls.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="UTF-8">
+    <title>Agent's Casting Calls</title>
      <link rel="stylesheet" href="styles.css">
 
 		<style>
@@ -18,7 +20,7 @@
         <li><a href=./Messages.html>Messages</a></li>
 </ul>
 
-<form align="right" name="form1" method="post" action="index.html">
+<form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
@@ -44,8 +46,8 @@
 </div>
 <div class="postings">
 <div class = "post">
-	<h1><center>Titanic</center></h1>
-	<h2><center>Feature Film</center></h2>
+	<h1>Titanic</h1>
+	<h2>Feature Film</h2>
 	<p>
         Role: Rose <br>
         Gender: Female <br>
@@ -63,8 +65,8 @@
 </div>
 
 <div class = "post">
-  <h1><center>Game of Thrones</center></h1>
-  <h2><center>Television show</center></h2>
+  <h1>Game of Thrones</h1>
+  <h2>Television show</h2>
 	<p>
         Role: Extra Wildling <br>
         Gender: Male/Female <br>
