--- a/AgentPortfolio.html
+++ b/AgentPortfolio.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <title>Agent's Clients</title>
+     <meta charset="utf-8" />
      <link rel="stylesheet" href="styles.css">
 		<style>
 
@@ -21,24 +23,24 @@ img {
         <li><a href=./AgentPortfolio.html>Portfolio</a></li>
         <li><a href=./Messages.html>Messages</a></li>
 </ul>
-<form align="right" name="form1" method="post" action="index.html">
+<form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
 </form>
 
 <div class = "personInfo">
-  <img src="isaac-chu-pic.jpg" />
+  <img src="isaac-chu-pic.jpg" alt="Isaac Chu"/>
   
    <br />
             Agent Info:<br /><br />
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbspName:
+  Name:
   <input type="text" name="name" value="Isaac Chu"/><br><br />
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAge:
+  Age:
 	<input type="text" name="age" value="40" /><br><br />
-  &nbsp&nbsp&nbsp&nbsp&nbspGender:
+  Gender:
   <input type="text" name="gender" value="Male" /><br><br />
-  &nbsp&nbsp&nbsp&nbsp&nbspTalent Agency:
+  Talent Agency:
   <input type="text" name="Agency" value="CSE134B Talent" /><br><br />
 
 </div>
