--- a/AgentsClients.html
+++ b/AgentsClients.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+     <title>Agent's Clients</title>
+     <meta charset="utf-8" />
      <link rel="stylesheet" href="styles.css">
 		<style>
 
@@ -14,7 +16,7 @@
 a.button {
     -webkit-appearance: button;
     -moz-appearance: button;
-    appearance: button;
+    
 
     text-decoration: none;
     color: initial;
@@ -27,12 +29,12 @@ a.button {
 
 <ul>
         <li><a href="AgentCastingCalls.html">Browse Casting Calls</a></li>
-        <li><a href="./AgentsClients.html">My Clients</a></li>
-        <li><a href=./AgentPortfolio.html>Portfolio</a></li>
-        <li><a href=./Messages.html>Messages</a></li>
+        <li><a href="AgentsClients.html">My Clients</a></li>
+        <li><a href="AgentPortfolio.html">Portfolio</a></li>
+        <li><a href="Messages.html">Messages</a></li>
 </ul>
 
-<form align="right" name="form1" method="post" action="index.html">
+<form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
@@ -56,27 +58,23 @@ a.button {
 </div>
 <div class="postings">
 <div class = "post">
-	<h1><center>Fake Client 1</center></h1>
-  <h3><center>Agency: CSE134B Talent<center></h3>
-  <h3><center>Gender: Male</center></h3>
-  <h3><center>Age: 30<center></h3>
-  <h3><center>Located: La Jolla<center></h3>
-  <h3><center>Website: fakeclient1.com <center></h3>
-  <div style="text-align: center">
-  <a href="./Messages.html" class="button" >Message</a>
-  </div>
+	<h1>Fake Client 1</h1>
+  <h3>Agency: CSE134B Talent</h3>
+  <h3>Gender: Male</h3>
+  <h3>Age: 30</h3>
+  <h3>Located: La Jolla</h3>
+  <h3>Website: fakeclient1.com </h3>
+  
 </div>
 
 <div class = "post">
-	<h1><center>Fake Client 2</center></h1>
-  <h3><center>Agency: CSE134B Talent<center></h3>
-  <h3><center>Gender: Female</center></h3>
-  <h3><center>Age: 24<center></h3>
-  <h3><center>Located: La Jolla<center></h3>
-  <h3><center>Website: fakeclient2.com <center></h3>
-  <div style="text-align: center">
-  <a href="./Messages.html" class="button" >Message</a>
-  </div>
+	<h1>Fake Client 2</h1>
+  <h3>Agency: CSE134B Talent</h3>
+  <h3>Gender: Female</h3>
+  <h3>Age: 24</h3>
+  <h3>Located: La Jolla</h3>
+  <h3>Website: fakeclient2.com </h3>
+  
 </div>
 </div>
 
