--- a/actorFindAgent.html
+++ b/actorFindAgent.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>Agent's Clients</title>
+     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css">
     <style>
         div.currentAgent {
@@ -55,7 +57,7 @@
         <li><a href="actorPortfolio.html">Portfolio</a></li>
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
-    <form align="right" name="form1" method="post" action="index.html">
+    <form name="form1" method="post" action="index.html">
         <label class="logoutLblPos">
             <input name="submit2" type="submit" id="submit2" value="log out">
         </label>
@@ -82,13 +84,13 @@
     <div class="postings">
 
         <div class="currentAgent">
-            <img class="currentAgentImg" src="isaac-chu-pic.jpg" />
+            <img class="currentAgentImg" src="isaac-chu-pic.jpg" alt="isaac"/>
 
             <br />
             Current Agent:<br /><br />
-            &nbspName:
+            Name:
             <input type="text" name="name" value="Isaac Chu" /><br><br />
-            &nbsp&nbspAge:
+            Age:
             <input type="text" name="age" value="40" /><br><br />
             Gender:
             <input type="text" name="gender" value="Male" /><br><br />
@@ -97,13 +99,13 @@
         </div>
 
         <div class="agent1">
-            <img class="agent1Img" src="isaac-chu-pic.jpg" />
+            <img class="agent1Img" src="isaac-chu-pic.jpg" alt="isaac"/>
 
             <br />
             Agent 1:<br /><br />
-            &nbspName:
+            Name:
             <input type="text" name="name" value="Andrew Lee" /><br><br />
-            &nbsp&nbspAge:
+            Age:
             <input type="text" name="age" value="35" /><br><br />
             Gender:
             <input type="text" name="gender" value="Male" /><br><br />
