--- a/actorHomePage.html
+++ b/actorHomePage.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+     <title>Agent's Clients</title>
+     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css">
     <style>
         
@@ -78,7 +80,7 @@
             <li><a href="actorPortfolio.html">Portfolio</a></li>
             <li><a href=./Messages.html>Messages</a></li>
         </ul>
-    <form align="right" name="form1" method="post" action="log_out.php">
+    <form name="form1" method="post" action="log_out.php">
         <label class="logoutLblPos">
             <input name="submit2" type="submit" id="submit2" value="log out">
         </label>
