--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>Home Page</title>
+     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css">
     <style>
         
@@ -16,7 +18,7 @@
             max-height: 100%;
             margin: 0;
             padding: 0;
-            background-image: url('HomeImage.jpg');
+            background-image: url('oscars_2018.jpg');
             background-size:100% 100%;
             background-repeat: no-repeat;
         }
