--- a/Messages.html
+++ b/Messages.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Agent's Clients</title>
+     <meta charset="utf-8" />
   <link rel="stylesheet" href="styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -54,7 +56,7 @@
 <ul>
         <li><a href=./Messages>Messages</a></li>
 </ul>
-<form align="right" name="form1" method="post" action="index.html">
+<form name="form1" method="post" action="index.html">
   <label class="logoutLblPos">
   <input name="submit2" type="submit" id="submit2" value="log out">
   </label>
