--- a/ActorSignIn.html
+++ b/ActorSignIn.html
@@ -65,7 +65,7 @@
   <div class="loginSection">
         <p> Actor Sign In Page </p>
             <div class="logIn">
-                <form class="logIn" method="post" action="./newRecruiterHome.html">
+                <form class="logIn" method="post" action="./actorHomePage.html">
                     <br /><br />
 
                     <label for="email">Email</label>
