changed newRecruiterHome to have list of actors

--- a/RecruiterSignIn.html
+++ b/RecruiterSignIn.html
@@ -67,7 +67,7 @@
     <div class="loginSection">
         <p> &amp;nbsp &amp;nbsp Talent Recruiter Sign In Page </p>
             <div class="logIn">
-                <form class="logIn" method="post" action="./newRecruiterHome.html">
+                <form class="logIn" method="post" action="./RecruitersPostings.html">
                     <br /><br />
 
                     <label for="email">Email</label>
