--- a/RecruitersPostings.html
+++ b/RecruitersPostings.html
@@ -96,7 +96,7 @@
     
     <ul>
         <li><a href="newRecruiterHome.html">Browse Actors</a></li>
-        <li><a href="#newRecruiterPostings.html">My Postings</a></li>
+        <li><a href="#postings">My Postings</a></li>
         <!--<li><a href=./actorPortfolio.html>Portfolio</a></li>-->
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
