--- a/RecruiterSignIn.html
+++ b/RecruiterSignIn.html
@@ -65,16 +65,16 @@
 
 
     <div class="loginSection">
-        <p> &amp;nbsp &amp;nbsp Talent Recruiter Sign In Page </p>
+        <p> Talent Recruiter Sign In Page </p>
             <div class="logIn">
                 <form class="logIn" method="post" action="./RecruitersPostings.html">
                     <br /><br />
 
                     <label for="email">Email</label>
                     <input type="text" id="email" name="email">
-                    <label for="password"> &amp;nbsp &amp;nbsp Password</label>
+                    <label for="password">  Password</label>
                     <input type="password" id="password" name="password" />
-                    <label for="submit"> &amp;nbsp &amp;nbsp</label>
+                    <label for="submit"> </label>
                     <input type="submit" id="submit" value="Log In" />
                     <br /><br /><br />
 
