changed agent pages

--- a/ActorSignIn.html
+++ b/ActorSignIn.html
@@ -124,8 +124,8 @@
                 <input type="password" name="password" />
 
             <br /><br />
-                Birthday:<br />
-                <input id"="bDay" type="text" name="bday"><br /><br />
+                <!-- Birthday:<br />
+                <input id"="bDay" type="text" name="bday"><br /><br /> -->
 
                 <input id="r1" type="radio" name="gender" value="male" checked> Male<br>
                 <input id="r2" type="radio" name="gender" value="female"> Female<br><br />
