--- a/AgentsPostings.html
+++ b/AgentsPostings.html
@@ -98,9 +98,9 @@
 
     <ul>
 
-        
-        <li><a href="actorFindAgent.html">Browse Actors</a></li>
-        <!--<li><a href="actorPortfolio.html">Portfolio</a></li>-->
+        <li><a href="#postings">Postings</a></li>
+        <li><a href="./AgentsClients.html">Browse Actors</a></li>
+        <li><a href="./AgentPortfolio.html">Portfolio</a></li>
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
     <form name="form1" method="post" action="index.html">
