--- a/actorHomePage.html
+++ b/actorHomePage.html
@@ -103,11 +103,11 @@
         <li><a href="actorPortfolio.html">Portfolio</a></li>
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
-    <form align="right" name="form1" method="post" action="log_out.php">
-        <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="log out">
-        </label>
-    </form>
+    <form name="form1" method="post" action="index.html">
+  <label class="logoutLblPos">
+  <input name="submit2" type="submit" id="submit2" value="log out">
+  </label>
+</form>
     
     <div id="postings">
     </div>
