--- a/AgentSignIn.html
+++ b/AgentSignIn.html
@@ -56,7 +56,7 @@
      <div class="loginSection">
         <p> Agent Sign In Page </p>
             <div class="logIn">
-                <form class="logIn" method="post" action="./newRecruiterHome.html">
+                <form class="logIn" method="post" action="./AgentsPostings.html">
                     <br /><br />
 
                     <label for="email">Email</label>
