--- a/RecruitersPostings.html
+++ b/RecruitersPostings.html
@@ -98,8 +98,8 @@
 
     <ul>
 
-        
-        <li><a href="actorFindAgent.html">Browse Actors</a></li>
+        <li><a href="RecruitersPostings.html">Postings</a></li>
+        <li><a href="recruiterBrowseActor.html">Browse Actors</a></li>
         <!--<li><a href="actorPortfolio.html">Portfolio</a></li>-->
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
