--- a/recruiterBrowseActor.html
+++ b/recruiterBrowseActor.html
@@ -93,9 +93,10 @@
 </head>
 <body>
 
-    <ul>.  ./RecruitersPostings.html
-        <li><a href="./RecruitersPostings.html">Browse Actors</a></li>
-        <li><a href="newRecruiterHome.html">My Postings</a></li>
+    <ul>  
+    	<li><a href="./RecruitersPostings.html">Postings</a></li>
+        <li><a href="newRecruiterHome.html">Browse Actors</a></li>
+        
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
     <form name="form1" method="post" action="index.html">
