--- a/recruiterBrowseActor.html
+++ b/recruiterBrowseActor.html
@@ -95,7 +95,7 @@
 
     <ul>  
     	<li><a href="./RecruitersPostings.html">Postings</a></li>
-        <li><a href="newRecruiterHome.html">Browse Actors</a></li>
+        <li><a href="recruiterBrowseActor.html">Browse Actors</a></li>
         
         <li><a href=./Messages.html>Messages</a></li>
     </ul>
